--- a/cmdHelp.yml
+++ b/cmdHelp.yml
@@ -1,6 +1,17 @@
-Commands:
+Help:
   expressions:
     help:
-      '1': '&3/facepalm &b- [Your Name] facepalmed'
-      '2': '&3/facedesk &b- [Your Name] facedesked'
-      '3': '&3/slap <player> [force] &b- slap a player'
+      '1': '&bHelp &3- /expressions help'
+      '2': '&bVersion &3- /expressions version'
+      '3': '&bCommands &3- /expressions commands'
+    commands:
+      '1': '&bFacepalm &3- /facepalm'
+      '2': '&bFacedesk &3- /facedesk'
+      '3': '&bSlap Player &3- /slap <player> [power]'
+Usage:
+  expressions:
+    self:
+      '1': '&b{PLNAME} &3by Stealth2800'
+      '2': '&c/expressions help'
+    help:
+      '1': '&c/expressions help [page]'
